argocd/apps/nextcloud/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: nextcloud
spec:
  selector:
    app: server
  ports:
    - port: 80
