argocd/apps/nextcloud/server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: upgrade-scheme
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirects
  namespace: nextcloud
spec:
  redirectRegex:
    regex: "^/.well-known/(card|cal)dav"
    replacement: "/remote.php/dav/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hsts-header
  namespace: nextcloud
spec:
  headers:
    customResponseHeaders:
      Strict-Transport-Security: "max-age=15552000; includeSubDomains"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-http
  namespace: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sync.mohsun.az`) && !PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: server
          port: 80
      middlewares:
        - name: upgrade-scheme
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: server-https
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sync.mohsun.az`)
      services:
        - name: server
          port: 80
      middlewares:
        - name: redirects
        - name: hsts-header
  tls:
    secretName: sync-mohsun-az-tls
